--- a/PROJECT1/Youtube_Trending.ipynb
+++ b/PROJECT1/Youtube_Trending.ipynb
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 519,
    "metadata": {
     "scrolled": true
    },
@@ -538,6 +538,7 @@
        "      <th>Dislikes</th>\n",
        "      <th>Comments</th>\n",
        "      <th>Trending_count</th>\n",
+       "      <th>Country</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -549,6 +550,7 @@
        "      <td>6730531</td>\n",
        "      <td>9899166</td>\n",
        "      <td>9964</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -558,6 +560,7 @@
        "      <td>1076667</td>\n",
        "      <td>3013141</td>\n",
        "      <td>3457</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -567,6 +570,7 @@
        "      <td>686181</td>\n",
        "      <td>1956237</td>\n",
        "      <td>2345</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -576,6 +580,7 @@
        "      <td>705387</td>\n",
        "      <td>2894804</td>\n",
        "      <td>4146</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -585,6 +590,7 @@
        "      <td>5264504</td>\n",
        "      <td>12865088</td>\n",
        "      <td>6472</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -594,6 +600,7 @@
        "      <td>1379082</td>\n",
        "      <td>3055820</td>\n",
        "      <td>3210</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -603,6 +610,7 @@
        "      <td>547989</td>\n",
        "      <td>1391115</td>\n",
        "      <td>2401</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -612,6 +620,7 @@
        "      <td>797782</td>\n",
        "      <td>1491921</td>\n",
        "      <td>2174</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -628,18 +637,18 @@
        "6  Science & Technology   428430317   10165998    547989   1391115   \n",
        "7                Sports   641054451   12606962    797782   1491921   \n",
        "\n",
-       "   Trending_count  \n",
-       "0            9964  \n",
-       "1            3457  \n",
-       "2            2345  \n",
-       "3            4146  \n",
-       "4            6472  \n",
-       "5            3210  \n",
-       "6            2401  \n",
-       "7            2174  "
+       "   Trending_count        Country  \n",
+       "0            9964  United States  \n",
+       "1            3457  United States  \n",
+       "2            2345  United States  \n",
+       "3            4146  United States  \n",
+       "4            6472  United States  \n",
+       "5            3210  United States  \n",
+       "6            2401  United States  \n",
+       "7            2174  United States  "
       ]
      },
-     "execution_count": 482,
+     "execution_count": 519,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,6 +662,7 @@
     "Top_USnewDF[\"Dislikes\"] = UShigher_dislikes.Dislikes.values\n",
     "Top_USnewDF[\"Comments\"] = UShigher_comments.Comments.values\n",
     "Top_USnewDF[\"Trending_count\"] = higher_trending.Trending_count.values\n",
+    "Top_USnewDF[\"Country\"] = \"United States\"\n",
     "Top_USnewDF"
    ]
   },
@@ -873,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 518,
    "metadata": {},
    "outputs": [
     {
@@ -903,6 +913,7 @@
        "      <th>Dislikes</th>\n",
        "      <th>Comments</th>\n",
        "      <th>Trending_count</th>\n",
+       "      <th>Country</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -914,6 +925,7 @@
        "      <td>46397</td>\n",
        "      <td>123347</td>\n",
        "      <td>384</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -923,6 +935,7 @@
        "      <td>189946</td>\n",
        "      <td>634097</td>\n",
        "      <td>1656</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -932,6 +945,7 @@
        "      <td>624992</td>\n",
        "      <td>1386717</td>\n",
        "      <td>817</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -941,6 +955,7 @@
        "      <td>772357</td>\n",
        "      <td>1087653</td>\n",
        "      <td>2487</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -950,6 +965,7 @@
        "      <td>563262</td>\n",
        "      <td>740432</td>\n",
        "      <td>57</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -959,6 +975,7 @@
        "      <td>67902</td>\n",
        "      <td>359329</td>\n",
        "      <td>920</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -968,6 +985,7 @@
        "      <td>1451</td>\n",
        "      <td>6085</td>\n",
        "      <td>57</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -977,6 +995,7 @@
        "      <td>39341</td>\n",
        "      <td>105703</td>\n",
        "      <td>402</td>\n",
+       "      <td>United States</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -993,18 +1012,18 @@
        "6                   Shows    3049600    61741      1451      6085   \n",
        "7         Travel & Events   58840828   587696     39341    105703   \n",
        "\n",
-       "   Trending_count  \n",
-       "0             384  \n",
-       "1            1656  \n",
-       "2             817  \n",
-       "3            2487  \n",
-       "4              57  \n",
-       "5             920  \n",
-       "6              57  \n",
-       "7             402  "
+       "   Trending_count        Country  \n",
+       "0             384  United States  \n",
+       "1            1656  United States  \n",
+       "2             817  United States  \n",
+       "3            2487  United States  \n",
+       "4              57  United States  \n",
+       "5             920  United States  \n",
+       "6              57  United States  \n",
+       "7             402  United States  "
       ]
      },
-     "execution_count": 489,
+     "execution_count": 518,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,6 +1037,7 @@
     "Last_USnewDF[\"Dislikes\"] = USless_dislikes.Dislikes.values\n",
     "Last_USnewDF[\"Comments\"] = USless_comments.Comments.values\n",
     "Last_USnewDF[\"Trending_count\"] = USless_trending.Trending_count.values\n",
+    "Last_USnewDF[\"Country\"] = \"United States\"\n",
     "Last_USnewDF\n"
    ]
   },
@@ -1170,8 +1190,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
-   "metadata": {},
+   "execution_count": 517,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1535,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 520,
    "metadata": {},
    "outputs": [
     {
@@ -1565,6 +1587,7 @@
        "      <th>Dislikes</th>\n",
        "      <th>Comments</th>\n",
        "      <th>Trending_count</th>\n",
+       "      <th>Country</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1576,6 +1599,7 @@
        "      <td>5294387</td>\n",
        "      <td>9104781</td>\n",
        "      <td>9819</td>\n",
+       "      <td>France</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1585,6 +1609,7 @@
        "      <td>1558423</td>\n",
        "      <td>4175303</td>\n",
        "      <td>4343</td>\n",
+       "      <td>France</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1594,6 +1619,7 @@
        "      <td>677501</td>\n",
        "      <td>1742424</td>\n",
        "      <td>2157</td>\n",
+       "      <td>France</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1603,6 +1629,7 @@
        "      <td>686982</td>\n",
        "      <td>1776471</td>\n",
        "      <td>1459</td>\n",
+       "      <td>France</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1612,6 +1639,7 @@
        "      <td>447318</td>\n",
        "      <td>1149019</td>\n",
        "      <td>2361</td>\n",
+       "      <td>France</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1621,6 +1649,7 @@
        "      <td>4907431</td>\n",
        "      <td>12532032</td>\n",
        "      <td>3946</td>\n",
+       "      <td>France</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1630,6 +1659,7 @@
        "      <td>589439</td>\n",
        "      <td>1327472</td>\n",
        "      <td>3752</td>\n",
+       "      <td>France</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1639,6 +1669,7 @@
        "      <td>1215512</td>\n",
        "      <td>2891912</td>\n",
        "      <td>5719</td>\n",
+       "      <td>France</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -1648,25 +1679,37 @@
        "      <td>1320690</td>\n",
        "      <td>2740328</td>\n",
        "      <td>4342</td>\n",
+       "      <td>France</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Categories       Views      Likes  Dislikes  Comments  Trending_count\n",
-       "0     Entertainment  2621401132   71000558   5294387   9104781            9819\n",
-       "1            Comedy   969170576   54150058   1558423   4175303            4343\n",
-       "2  Film & Animation   598656251   14130217    677501   1742424            2157\n",
-       "3            Gaming   267149796   13085230    686982   1776471            1459\n",
-       "4    How-to & Style   344267251   10467818    447318   1149019            2361\n",
-       "5             Music  2705575176  137154736   4907431  12532032            3946\n",
-       "6   News & Politics   365736377    5660456    589439   1327472            3752\n",
-       "7    People & Blogs   887398517   20373154   1215512   2891912            5719\n",
-       "8            Sports  1373022249   24565598   1320690   2740328            4342"
+       "         Categories       Views      Likes  Dislikes  Comments  \\\n",
+       "0     Entertainment  2621401132   71000558   5294387   9104781   \n",
+       "1            Comedy   969170576   54150058   1558423   4175303   \n",
+       "2  Film & Animation   598656251   14130217    677501   1742424   \n",
+       "3            Gaming   267149796   13085230    686982   1776471   \n",
+       "4    How-to & Style   344267251   10467818    447318   1149019   \n",
+       "5             Music  2705575176  137154736   4907431  12532032   \n",
+       "6   News & Politics   365736377    5660456    589439   1327472   \n",
+       "7    People & Blogs   887398517   20373154   1215512   2891912   \n",
+       "8            Sports  1373022249   24565598   1320690   2740328   \n",
+       "\n",
+       "   Trending_count Country  \n",
+       "0            9819  France  \n",
+       "1            4343  France  \n",
+       "2            2157  France  \n",
+       "3            1459  France  \n",
+       "4            2361  France  \n",
+       "5            3946  France  \n",
+       "6            3752  France  \n",
+       "7            5719  France  \n",
+       "8            4342  France  "
       ]
      },
-     "execution_count": 498,
+     "execution_count": 520,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1680,6 +1723,7 @@
     "Top_FRnewDF[\"Dislikes\"] = FRhigher_dislikes.Dislikes.values\n",
     "Top_FRnewDF[\"Comments\"] = FRhigher_comments.Comments.values\n",
     "Top_FRnewDF[\"Trending_count\"] = FRhigher_trending.Trending_count.values\n",
+    "Top_FRnewDF[\"Country\"] = \"France\"\n",
     "Top_FRnewDF"
    ]
   },
@@ -1897,7 +1941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 521,
    "metadata": {
     "scrolled": false
    },
@@ -1929,6 +1973,7 @@
        "      <th>Dislikes</th>\n",
        "      <th>Comments</th>\n",
        "      <th>Trending_count</th>\n",
+       "      <th>Country</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1940,6 +1985,7 @@
        "      <td>42325</td>\n",
        "      <td>151952</td>\n",
        "      <td>673</td>\n",
+       "      <td>France</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1949,6 +1995,7 @@
        "      <td>123788</td>\n",
        "      <td>468013</td>\n",
        "      <td>769</td>\n",
+       "      <td>France</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1958,6 +2005,7 @@
        "      <td>1034</td>\n",
        "      <td>1429</td>\n",
        "      <td>11</td>\n",
+       "      <td>France</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1967,6 +2015,7 @@
        "      <td>746744</td>\n",
        "      <td>918604</td>\n",
        "      <td>114</td>\n",
+       "      <td>France</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1976,6 +2025,7 @@
        "      <td>30369</td>\n",
        "      <td>160940</td>\n",
        "      <td>237</td>\n",
+       "      <td>France</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1985,6 +2035,7 @@
        "      <td>263900</td>\n",
        "      <td>1246133</td>\n",
        "      <td>802</td>\n",
+       "      <td>France</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1994,6 +2045,7 @@
        "      <td>100505</td>\n",
        "      <td>43385</td>\n",
        "      <td>99</td>\n",
+       "      <td>France</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -2003,6 +2055,7 @@
        "      <td>9</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>France</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -2012,6 +2065,7 @@
        "      <td>7071</td>\n",
        "      <td>46060</td>\n",
        "      <td>119</td>\n",
+       "      <td>France</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2029,19 +2083,19 @@
        "7                Trailers       9804      138         9         0   \n",
        "8         Travel & Events    5293612   324068      7071     46060   \n",
        "\n",
-       "   Trending_count  \n",
-       "0             673  \n",
-       "1             769  \n",
-       "2              11  \n",
-       "3             114  \n",
-       "4             237  \n",
-       "5             802  \n",
-       "6              99  \n",
-       "7               2  \n",
-       "8             119  "
+       "   Trending_count Country  \n",
+       "0             673  France  \n",
+       "1             769  France  \n",
+       "2              11  France  \n",
+       "3             114  France  \n",
+       "4             237  France  \n",
+       "5             802  France  \n",
+       "6              99  France  \n",
+       "7               2  France  \n",
+       "8             119  France  "
       ]
      },
-     "execution_count": 505,
+     "execution_count": 521,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2055,6 +2109,7 @@
     "Low_FRnewDF[\"Dislikes\"] = FRlow_dislikes.Dislikes.values\n",
     "Low_FRnewDF[\"Comments\"] = FRlow_comments.Comments.values\n",
     "Low_FRnewDF[\"Trending_count\"] = FRlow_trending.Trending_count.values\n",
+    "Low_FRnewDF[\"Country\"] = \"France\"\n",
     "Low_FRnewDF"
    ]
   },
@@ -2254,42 +2309,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "t-statistics is 2.2920125205741355.\n",
-      "p-value is 0.055454119591593125.\n"
-     ]
-    }
-   ],
+   "execution_count": 529,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "(t_stat, p) = stats.ttest_ind(Top_USnewDF[\"Likes\"], Last_USnewDF[\"Likes\"], equal_var=False)\n",
-    "print(\"t-statistics is {}.\".format(t_stat))\n",
-    "print(\"p-value is {}.\".format(p))"
+    "# Creates a new Dataframe with both countries' Top Categories together \n",
+    "Top_Categories = Top_USnewDF.append(Top_FRnewDF,ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 530,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creates a new Dataframe with both countries' Least Categories together \n",
+    "Least_categories = Last_USnewDF.append(Low_FRnewDF,ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 532,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t-statistics is 2.5764069778222116.\n",
-      "p-value is 0.03256848753015534.\n"
+      "t-statistics is 3.5492496085180427.\n",
+      "p-value is 0.0026461438608014376.\n"
      ]
     }
    ],
    "source": [
-    "(t_stat, p) = stats.ttest_ind(Top_FRnewDF[\"Likes\"], Low_FRnewDF[\"Likes\"], equal_var=False)\n",
+    "(t_stat, p) = stats.ttest_ind(Top_Categories[\"Likes\"], Least_categories[\"Likes\"], equal_var=False)\n",
     "print(\"t-statistics is {}.\".format(t_stat))\n",
     "print(\"p-value is {}.\".format(p))"
    ]
